# glassbox

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  ablation.py  attention.py  logit_lens.py  meta.py
backend/app/core/: __init__.py  config.py  manager.py  models.py
backend/app/schemas/: requests.py  results.py
backend/app/services/: __init__.py  ablation.py  arch.py  attention.py  logit_lens.py
backend/glassbox/: __init__.py  main.py
backend/glassbox/api/: __init__.py  deps.py
backend/glassbox/api/routers/: ablation.py  attention.py  logit_lens.py  meta.py
backend/glassbox/core/: manager.py  models.py
backend/glassbox/schemas/: __init__.py  requests.py
backend/glassbox/services/: ablation.py  attention.py  logit_lens.py  tokens.py
backend/scripts/: run_logit_lens.py
backend/tests/: test_ablation.py  test_attention.py  test_faithfulness.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  theme.ts
frontend/src/components/: AblationView.tsx  AttentionView.tsx  EmptyState.tsx  Explainer.tsx  LoadingOverlay.tsx  LogitLensGrid.tsx  LogitLensSection.tsx  LogitLensStream.tsx  PromptBar.tsx  Select.tsx  StatusBar.tsx
glassbox/: __init__.py  ablation.py  api.py  attention.py  logit_lens.py  schemas.py  tokens.py
plans/: GLASSBOX-project-brief.md  GLASSBOX-simulate-feature.md  GLASSBOX-v3-enhancements.md  GLASSBOX-v4-vision.md  GLASSBOX-v5-frontier.md  GLASSBOX-v6-instrument.md  GLASSBOX-v7-beyond.md  GLASSBOX-v8-endgame.md  GLASSBOX-weekend2-plan.md  transformer-mental-model-chat.md
scripts/: run_logit_lens.py
tests/: test_ablation.py  test_attention.py
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css
web/src/components/: AblationView.tsx  LogitLensGrid.tsx  PromptBar.tsx
