[project]
name = "glassbox"
version = "0.1.0"
description = "See what a language model is thinking, layer by layer — logit lens, attention, ablation."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "transformer-lens>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glassbox"]
