[project]
name = "glassbox"
version = "0.1.0"
description = "See what a language model is thinking, layer by layer — logit lens, attention, ablation."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    # Pinned, not floored: TransformerBridge is new and its surface moves between
    # releases. The decode path (model.ln_final as a NormalizationBridge) is verified
    # against exactly this version. See plans/GLASSBOX-weekend2-plan.md.
    "transformer-lens==3.4.0",
    "torch",
    "transformers",
    "accelerate",
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glassbox"]
