[project]
name = "glassbox"
version = "0.1.0"
description = "See what a language model is thinking, layer by layer — logit lens, attention, ablation."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    # Pinned, not floored: TransformerBridge is new and its surface moves between
    # releases. The decode path (model.ln_final as a NormalizationBridge) is verified
    # against exactly this version. See plans/GLASSBOX-weekend2-plan.md.
    "transformer-lens==3.4.0",
    "torch",
    "transformers",
    "accelerate",
    "pydantic>=2",
    "pydantic-settings>=2",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle errors/warnings, pyflakes, isort, pyupgrade, flake8-bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends()` in argument defaults is the intended idiom, not a B008 bug.
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    # Tests that boot a real model (downloads GPT-2 ~500 MB on first run). Skip with
    # `pytest -m "not slow"` for a quick, model-free run.
    "slow: requires loading a real model",
]
